# chatWithServers

./: CMakeLists.txt  introduce.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp  offlinemsgmodel.hpp  user.hpp  usermodel.hpp
include/server/db/: db.hpp
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp
src/: CMakeLists.txt
src/client/: main.cpp
src/server/: CMakeLists.txt  chatservice.cpp  main.cpp  offlinemsgmodel.cpp  usermodel.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  usermodel.cpp
test/testCMake/: CMakeLists.txt  introduce.md
test/testCMake/src/: testjson.cpp
test/testjson/: testjson  testjson.cpp
testCMake/: introduce.md
testMuduo/: muduo_server.cpp  server
testjson/: testjson  testjson.cpp
